# cmake-version-manager

./: Cargo.toml  LICENSE  README.md
src/: help.rs  install.rs  install_or_switch.rs  list.rs  log.rs  macros.rs  main.rs  releases.rs  remove.rs  setup.rs  switch.rs  utils.rs  version.rs
src/install/: helper_strings.rs  mod.rs
