[package]
name = "cmake-version-manager"
version = "0.2.4"
authors = ["diego50 <diego@paragonpawns.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ParagonPawns/cmake-version-manager"
description = "CMake version helps manage installed versions of cmake."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cvm"
path = "src/main.rs"

[target.'cfg(target_os="macos")'.dependencies]
sysinfo = "0.18.0"

[dependencies]
ansi-builder = "0.1.6"
reqwest = { version = "0.11.19", features = [ "blocking", "json" ] }
serde = { version = "1.0.185", features = [ "derive", "rc" ] }
serde_json = "1.0.105"
term-inquiry = "0.1.2"
